fix: datatable checkbox align

--- a/src/DataTable/index.scss
+++ b/src/DataTable/index.scss
@@ -175,6 +175,10 @@
 .pgn__data-table-filters-dropdown-item {
   padding: $data-table-padding-small 14px;
   min-width: 15em;
+
+  .pgn__form-checkbox {
+    align-items: center;
+  }
 }
 
 .pgn__data-table-status {
