--- a/src/Form/_index.scss
+++ b/src/Form/_index.scss
@@ -465,7 +465,6 @@ select.form-control {
 .pgn__form-switch,
 .pgn__form-radio {
   display: inline-flex;
-  align-items: center;
 
   .pgn__form-label {
     display: flex;
